Fixed overscroll issue on mobile

--- a/styles/compiled-styles.css
+++ b/styles/compiled-styles.css
@@ -110,158 +110,159 @@ header p {
       opacity: 1; }
 
 /* falling notes animation */
-#leaves {
-  position: relative;
+#notes {
+  position: absolute;
   top: -100px;
   width: 100%;
   text-align: left; }
 
-#leaves i {
+#notes i {
   display: inline-block;
   width: 200px;
   height: 200px;
   z-index: 1;
-  -webkit-animation: falling 5s 0s infinite; }
+  -webkit-animation: falling 7s 0s infinite;
+  margin-left: 10%; }
 
-#leaves i:nth-of-type(2n) {
-  -webkit-animation: falling2 5s 0s infinite; }
+#notes i:nth-of-type(2n) {
+  -webkit-animation: falling2 7s 0s infinite; }
 
-#leaves i:nth-of-type(3n) {
-  -webkit-animation: falling3 5s 0s infinite; }
+#notes i:nth-of-type(3n) {
+  -webkit-animation: falling3 7s 0s infinite; }
 
-#leaves i:nth-of-type(n) {
+#notes i:nth-of-type(n) {
   height: 23px;
   width: 30px; }
 
-#leaves i:nth-of-type(n):before {
+#notes i:nth-of-type(n):before {
   width: 7px;
   height: 5px;
   top: 17px;
   right: 1px; }
 
-#leaves i:nth-of-type(n):after {
+#notes i:nth-of-type(n):after {
   width: 2px;
   height: 17px;
   left: 12px;
   top: 0px; }
 
-#leaves i:nth-of-type(2n+1) {
+#notes i:nth-of-type(2n+1) {
   height: 40px;
   width: 40px; }
 
-#leaves i:nth-of-type(2n+1):before {
+#notes i:nth-of-type(2n+1):before {
   width: 20px;
   height: 20px;
   top: 7px;
   left: 0px; }
 
-#leaves i:nth-of-type(2n+1):after {
+#notes i:nth-of-type(2n+1):after {
   width: 2px;
   height: 6px;
   right: 5px;
   top: 1px; }
 
-#leaves i:nth-of-type(3n+2) {
+#notes i:nth-of-type(3n+2) {
   height: 17px;
   width: 23px; }
 
-#leaves i:nth-of-type(3n+2):before {
+#notes i:nth-of-type(3n+2):before {
   height: 4px;
   width: 4px;
   top: 12px;
   left: 1px; }
 
-#leaves i:nth-of-type(3n+2):after {
+#notes i:nth-of-type(3n+2):after {
   height: 10px;
   width: 2px;
   top: 1px;
   right: 8px; }
 
-#leaves i:nth-of-type(n) {
+#notes i:nth-of-type(n) {
   -webkit-animation-delay: 1.9s; }
 
-#leaves i:nth-of-type(2n) {
+#notes i:nth-of-type(2n) {
   -webkit-animation-delay: 3.9s; }
 
-#leaves i:nth-of-type(3n) {
+#notes i:nth-of-type(3n) {
   -webkit-animation-delay: 2.3s; }
 
-#leaves i:nth-of-type(4n) {
+#notes i:nth-of-type(4n) {
   -webkit-animation-delay: 4.4s; }
 
-#leaves i:nth-of-type(5n) {
+#notes i:nth-of-type(5n) {
   -webkit-animation-delay: 5s; }
 
-#leaves i:nth-of-type(6n) {
+#notes i:nth-of-type(6n) {
   -webkit-animation-delay: 3.5s; }
 
-#leaves i:nth-of-type(7n) {
+#notes i:nth-of-type(7n) {
   -webkit-animation-delay: 2.8s; }
 
-#leaves i:nth-of-type(8n) {
+#notes i:nth-of-type(8n) {
   -webkit-animation-delay: 1.5s; }
 
-#leaves i:nth-of-type(9n) {
+#notes i:nth-of-type(9n) {
   -webkit-animation-delay: 3.3s; }
 
-#leaves i:nth-of-type(10n) {
+#notes i:nth-of-type(10n) {
   -webkit-animation-delay: 2.5s; }
 
-#leaves i:nth-of-type(11n) {
+#notes i:nth-of-type(11n) {
   -webkit-animation-delay: 1.2s; }
 
-#leaves i:nth-of-type(12n) {
+#notes i:nth-of-type(12n) {
   -webkit-animation-delay: 4.1s; }
 
-#leaves i:nth-of-type(13n) {
+#notes i:nth-of-type(13n) {
   -webkit-animation-delay: 1s; }
 
-#leaves i:nth-of-type(14n) {
+#notes i:nth-of-type(14n) {
   -webkit-animation-delay: 4.7s; }
 
-#leaves i:nth-of-type(15n) {
+#notes i:nth-of-type(15n) {
   -webkit-animation-delay: 3s; }
 
-#leaves i:nth-of-type(n) {
+#notes i:nth-of-type(n) {
   background-image: url("../res/music-icon1.png");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   filter: invert(0); }
 
-#leaves i:nth-of-type(2n+2) {
+#notes i:nth-of-type(2n+2) {
   background-image: url("../res/music-icon2.png");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   filter: invert(0); }
 
-#leaves i:nth-of-type(4n+1) {
+#notes i:nth-of-type(4n+1) {
   background-image: url("../res/music-icon2.png");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   filter: invert(0); }
 
-#leaves i:nth-of-type(n) {
-  opacity: .7; }
-
-#leaves i:nth-of-type(3n+1) {
-  opacity: .5; }
-
-#leaves i:nth-of-type(3n+2) {
+#notes i:nth-of-type(n) {
   opacity: .3; }
 
-#leaves i:nth-of-type(n) {
+#notes i:nth-of-type(3n+1) {
+  opacity: .5; }
+
+#notes i:nth-of-type(3n+2) {
+  opacity: .3; }
+
+#notes i:nth-of-type(n) {
   transform: rotate(180deg); }
 
-#leaves i:nth-of-type(n) {
+#notes i:nth-of-type(n) {
   -webkit-animation-timing-function: ease-in-out; }
 
 @-webkit-keyframes falling {
   0% {
     -webkit-transform: translate3d(300, 0, 0) rotate(0deg); }
-  50% {
+  60% {
     opacity: 0; }
   100% {
     -webkit-transform: translate3d(350px, 100vh, 0) rotate(90deg);
@@ -269,7 +270,7 @@ header p {
 @-webkit-keyframes falling3 {
   0% {
     -webkit-transform: translate3d(0, 0, 0) rotate(-20deg); }
-  50% {
+  60% {
     opacity: 0; }
   100% {
     -webkit-transform: translate3d(230px, 100vh, 0) rotate(-70deg);
@@ -277,14 +278,16 @@ header p {
 @-webkit-keyframes falling2 {
   0% {
     -webkit-transform: translate3d(0, 0, 0) rotate(90deg); }
-  50% {
+  60% {
     opacity: 0; }
   100% {
     -webkit-transform: translate3d(400px, 100vh, 0) rotate(0deg);
     opacity: 0; } }
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: 768px) {
   .pads {
-    height: 40vh; }
+    height: calc(40vh); }
+    .pads div {
+      height: 40vh; }
 
   .wave {
     top: calc(60% - 10px); }
